Dodane popdoizvedbe, še nekaj popravkov

--- a/predavanja/01-uvod.marp.html
+++ b/predavanja/01-uvod.marp.html
@@ -15,7 +15,7 @@
 <li data-marpit-fragment="1">Predavanja:
 <ul>
 <li>Janoš Vidali (<a href="mailto:janos.vidali@fmf.uni-lj.si">janos.vidali@fmf.uni-lj.si</a>), kabinet 5.14</li>
-<li>ponedeljek 10-12 v predavalnici 3.10,</li>
+<li>ponedeljek 10-12 v predavalnici 3.10</li>
 <li>četrtek 8-9 v predavalnici 3.11</li>
 </ul>
 </li>
@@ -55,11 +55,11 @@
 <ul>
 <li>Vsak naslov v svoji vrsti</li>
 <li>Ali pa ločen z |</li>
-<li>Dokler poštni naslov ne vsebuje prihoda v novo vrsto ali |, vse deluje kot namazano ...</li>
+<li>Dokler poštni naslov ne vsebuje prehoda v novo vrsto ali |, vse deluje kot namazano ...</li>
 <li>Res?</li>
 </ul>
 </li>
-<li data-marpit-fragment="3">Iskanje je počasno.
+<li data-marpit-fragment="3">Iskanje je počasno
 <ul>
 <li>Ali je <a href="mailto:janos.vidali@fmf.uni-lj.si">janos.vidali@fmf.uni-lj.si</a> že na seznamu?</li>
 <li>Pregled cele datoteke</li>
