Popravek prikaza tabele

--- a/predavanja/02-SQL.marp.html
+++ b/predavanja/02-SQL.marp.html
@@ -1049,6 +1049,7 @@ GROUP columns is illegal if there is no GROUP BY clause
 <span>
 <ul>
 <li data-marpit-fragment="3">
+<p>Dobimo:</p>
 <table>
 <thead>
 <tr>
