--- a/predavanja/03-nacrtovanje.marp.html
+++ b/predavanja/03-nacrtovanje.marp.html
@@ -63,10 +63,10 @@
 </li>
 <li data-marpit-fragment="2">Pravila in izjeme
 <ul>
-<li>Poleg pravil v realnem svetu obstaja tudi veliko izjem</li>
+<li>Poleg pravil v realnem svetu obstaja tudi veliko izjem.</li>
 <li>Realni svet in njegovo okolje sta dinamična sistema, ki se pogosto spreminjata.</li>
 <li>Načrtovalec mora pri svojem delu mora upoštevati vsa pravila in tudi vse izjeme.</li>
-<li>Hkrati mora narediti sistem dovolj fleksibilno shemo, ki bo prilagojena bodočim spremembam.</li>
+<li>Hkrati mora narediti dovolj fleksibilno shemo, ki bo prilagojena bodočim spremembam.</li>
 </ul>
 </li>
 <li data-marpit-fragment="3">Velikost
@@ -130,10 +130,10 @@
 <li data-marpit-fragment="2">Možni koraki konceptualnega načrtovanja:
 <ul>
 <li>K1.1: Identificiraj entitetne tipe</li>
-<li>K1.2: Identificiraj povezave</li>
+<li>K1.2: Identificiraj odnose</li>
 <li>K1.3: Identificiraj in z entitetnimi tipi poveži atribute</li>
 <li>K1.4: Atributom določi domene</li>
-<li>K1.5: Določi kandidate za ključe; izmed kandidatov izberi primarni ključ</li>
+<li>K1.5: Določi kandidate za ključe; izmed kandidatov izberi glavni ključ</li>
 <li>K1.6: Po potrebi uporabi elemente razširjenega ER diagrama</li>
 <li>K1.7: Preveri, če v modelu obstajajo odvečni elementi</li>
 <li>K1.8: Preveri, če model “zdrži” transakcije</li>
@@ -248,17 +248,17 @@
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="15" data-marpit-fragments="2" data-style="@import url('style.css')" style="--style:@import url('style.css');">
 <h1 id="odnosi-ena-na-ve%C4%8D-1n">Odnosi ena na več (1:<em>n</em>)</h1>
 <ul>
-<li data-marpit-fragment="1">Vsaki entiteti prvega entitetnega ustreza ena entiteta drugega entitetnega tipa, vsaka entiteta drugega entitetnega tipa pa lahko ustreza nič ali več entitetam prvega entitetnega tipa.
+<li data-marpit-fragment="1">Vsaki entiteti prvega entitetnega ustreza nič ali več entitet drugega entitetnega tipa, vsaka entiteta drugega entitetnega tipa pa ustreza eni entiteti prvega entitetnega tipa.
 <ul>
-<li>V relacijski podatkovni bazi predstavimo tako, da v prvi tabeli dodamo stolpec z referenco na drugo tabelo.</li>
+<li>V relacijski podatkovni bazi predstavimo tako, da v drugi tabeli dodamo stolpec z referenco na prvo tabelo.</li>
 </ul>
 </li>
 <li data-marpit-fragment="2">Primer:
 <ul>
-<li>Oseba : Naslov</li>
-<li>Odnos: ima stalni naslov : je stalni naslov
+<li>Naslov : Oseba</li>
+<li>Odnos: je stalni naslov : ima stalni naslov
 <ul>
-<li>Vsaka ima le en stalni naslov, na istem naslovu pa je lahko več oseb.</li>
+<li>Vsaka oseba ima le en stalni naslov, na istem naslovu pa je lahko več oseb.</li>
 </ul>
 </li>
 </ul>
@@ -293,7 +293,7 @@
 <li data-marpit-fragment="2">Identifikacija odnosov</li>
 <li data-marpit-fragment="3">Identifikacija atributov (ime, opis, privzeta vrednost, ...)</li>
 <li data-marpit-fragment="4">Opredelitev domen (zaloge vrednosti)</li>
-<li data-marpit-fragment="5">Določitev kandidatnih ključev in primarnega ključa</li>
+<li data-marpit-fragment="5">Določitev kandidatnih ključev in glavnega ključa</li>
 <li data-marpit-fragment="6">Specializacija/posplošitev entitetnih tipov (po potrebi)</li>
 <li data-marpit-fragment="7">Risanje ER diagrama</li>
 <li data-marpit-fragment="8">Konzultacija z uporabniki</li>
@@ -388,7 +388,7 @@
 <p>Odnose predstavimo s povezavami med entitetnimi tipi.</p>
 </li>
 <li data-marpit-fragment="2">
-<p>S simboli pri entitetnem tipu, koliko entitet povezanega entitetnega tipa je v odnosu z njim.</p>
+<p>S simboli pri entitetnem tipu povemo, koliko entitet povezanega entitetnega tipa je v odnosu z njim.</p>
 <span class="columns small" style="--cols: 2;">
 <span>
 <p><img src="slike/cfn-11-0n.png" alt="" /></p>
@@ -402,7 +402,7 @@
 <p>Dandanes najpogosteje uporabljana notacija.</p>
 </li>
 <li data-marpit-fragment="4">
-<p>Slabosti:</p>
+<p>Pomanjkljivosti:</p>
 <ul>
 <li>Odnosi ne morejo imeti atributov.</li>
 <li>Možni so samo dvojiški odnosi.</li>
@@ -457,7 +457,7 @@
 <li data-marpit-fragment="3">Odnos z najmanjšo števnostjo 0 pri vseh entitetnih tipih lahko predstavimo s povezovalno tabelo.
 <ul>
 <li>Glavni ključ sestoji iz tujih ključev na ustrezne tabele, atribute predstavimo s stolpci v tabeli.</li>
-<li>Običajno uporabimo taki pristop tudi pri odnosih več na več z najmanjšo števnostjo 1.</li>
+<li>Običajno uporabimo tak pristop tudi pri odnosih več na več z najmanjšo števnostjo 1.</li>
 </ul>
 </li>
 </ul>
