--- a/predavanja/03-nacrtovanje.marp.html
+++ b/predavanja/03-nacrtovanje.marp.html
@@ -541,7 +541,7 @@ bivanje (#id_osebe-&gt;oseba(id_osebe), #id_kraja-&gt;kraj(id_kraja), leta)
 <li data-marpit-fragment="2">
 <p>Kakšne so težave?</p>
 <ul>
-<li>Npr. spremeni so naslov servisa pri Dellu.</li>
+<li>Npr. spremeni se naslov servisa pri Dellu.</li>
 <li>Ali pa Toshiba spremeni strukturo spletnih strani.</li>
 </ul>
 </li>
@@ -552,7 +552,7 @@ bivanje (#id_osebe-&gt;oseba(id_osebe), #id_kraja-&gt;kraj(id_kraja), leta)
 <span class="small">
 <ul>
 <li data-marpit-fragment="1">
-<p>Z ustreznimi stavki <code>UPDATE</code> lahko sočasno popravimo podatke v vseh ustreznih vrsticah - načeloma je to počasi!</p>
+<p>Z ustreznimi stavki <code>UPDATE</code> lahko sočasno popravimo podatke v vseh ustreznih vrsticah - načeloma je to počasno!</p>
 </li>
 <li data-marpit-fragment="2">
 <p>Lahko se zgodi, da bomo posamezne vrstice vstavljali ali popravljali ročno in bo čez čas tabela izgledala tako:</p>
@@ -854,7 +854,7 @@ bivanje (#id_osebe-&gt;oseba(id_osebe), #id_kraja-&gt;kraj(id_kraja), leta)
 <table>
 <thead>
 <tr>
-<th><u>Predmet</u></th>
+<th><u>Predmet</u> <mjx-container class="MathJax" jax="SVG"><svg style="vertical-align: -0.025ex;" xmlns="http://www.w3.org/2000/svg" width="2.262ex" height="1.181ex" role="img" focusable="false" viewBox="0 -511 1000 522"><g stroke="currentColor" fill="currentColor" stroke-width="0" transform="scale(1,-1)"><g data-mml-node="math"><g data-mml-node="mo"><path data-c="2192" d="M56 237T56 250T70 270H835Q719 357 692 493Q692 494 692 496T691 499Q691 511 708 511H711Q720 511 723 510T729 506T732 497T735 481T743 456Q765 389 816 336T935 261Q944 258 944 250Q944 244 939 241T915 231T877 212Q836 186 806 152T761 85T740 35T732 4Q730 -6 727 -8T711 -11Q691 -11 691 0Q691 7 696 25Q728 151 835 230H70Q56 237 56 250Z"></path></g></g></g></svg></mjx-container></th>
 <th><u>Smer</u></th>
 </tr>
 </thead>
@@ -968,7 +968,7 @@ bivanje (#id_osebe-&gt;oseba(id_osebe), #id_kraja-&gt;kraj(id_kraja), leta)
 <thead>
 <tr>
 <th><u>Predmet</u></th>
-<th><u>Profesor</u></th>
+<th><u>Profesor</u> <mjx-container class="MathJax" jax="SVG"><svg style="vertical-align: -0.025ex;" xmlns="http://www.w3.org/2000/svg" width="2.262ex" height="1.181ex" role="img" focusable="false" viewBox="0 -511 1000 522"><g stroke="currentColor" fill="currentColor" stroke-width="0" transform="scale(1,-1)"><g data-mml-node="math"><g data-mml-node="mo"><path data-c="2192" d="M56 237T56 250T70 270H835Q719 357 692 493Q692 494 692 496T691 499Q691 511 708 511H711Q720 511 723 510T729 506T732 497T735 481T743 456Q765 389 816 336T935 261Q944 258 944 250Q944 244 939 241T915 231T877 212Q836 186 806 152T761 85T740 35T732 4Q730 -6 727 -8T711 -11Q691 -11 691 0Q691 7 696 25Q728 151 835 230H70Q56 237 56 250Z"></path></g></g></g></svg></mjx-container></th>
 <th>Dan</th>
 <th>Ura</th>
 </tr>
@@ -1118,7 +1118,7 @@ bivanje (#id_osebe-&gt;oseba(id_osebe), #id_kraja-&gt;kraj(id_kraja), leta)
 <thead>
 <tr>
 <th><u>Predmet</u></th>
-<th>Profesor</th>
+<th>Profesor <mjx-container class="MathJax" jax="SVG"><svg style="vertical-align: -0.025ex;" xmlns="http://www.w3.org/2000/svg" width="2.262ex" height="1.181ex" role="img" focusable="false" viewBox="0 -511 1000 522"><g stroke="currentColor" fill="currentColor" stroke-width="0" transform="scale(1,-1)"><g data-mml-node="math"><g data-mml-node="mo"><path data-c="2192" d="M56 237T56 250T70 270H835Q719 357 692 493Q692 494 692 496T691 499Q691 511 708 511H711Q720 511 723 510T729 506T732 497T735 481T743 456Q765 389 816 336T935 261Q944 258 944 250Q944 244 939 241T915 231T877 212Q836 186 806 152T761 85T740 35T732 4Q730 -6 727 -8T711 -11Q691 -11 691 0Q691 7 696 25Q728 151 835 230H70Q56 237 56 250Z"></path></g></g></g></svg></mjx-container></th>
 <th>Dan</th>
 <th>Ura</th>
 </tr>
