--- a/predavanja/html/index.html
+++ b/predavanja/html/index.html
@@ -43,5 +43,26 @@
             <li><a href="https://www.google.com">Google</a></li>
             <li><a href="/">Vrh</a></li>
         </ol>
+
+        <h3>Slika</h3>
+
+        <img src="../slike/sqlitestudio1.png" />
+
+        <h2>Obrazec</h2>
+
+        <form action="druga_stran.html" method="POST">
+            <p>Ime: <input type="text" name="ime" placeholder="Ime in priimek" /></p>
+            <p>Geslo: <input type="password" name="geslo" /></p>
+            <p>Starost: <input type="number" name="starost" /></p>
+            <p>Datum: <input type="date" name="datum" /></p>
+            <p><input type="submit" value="Pošlji" /></p>
+        </form>
+
+        <h3>Google</h3>
+
+        <form action="https:/www.google.com/search" method="GET">
+            <input type="text" name="q" />
+            <input type="submit" value="Išči!" />
+        </form>
     </body>
 </html>
