Dodane prosojnice in primer za bottle

--- a/predavanja/html/druga_stran.html
+++ b/predavanja/html/druga_stran.html
@@ -2,6 +2,8 @@
 <html lang="sl">
     <head>
         <title>Še ena stran</title>
+
+        <link rel="stylesheet" href="stili.css" type="text/css">
     </head>
     <body>
         <p>Tukaj je še ena stran.</p>
