--- a/predavanja/html/index.html
+++ b/predavanja/html/index.html
@@ -2,6 +2,8 @@
 <html lang="sl">
     <head>
         <title>Poskusna spletna stran</title>
+
+        <link rel="stylesheet" href="stili.css" type="text/css">
     </head>
     <body>
         <h1>Dobrodošli na <a href="index.html">naši</a> spletni strani!</h1>
