Dodana manjkajoča beseda

--- a/predavanja/05-spletne-aplikacije.marp.html
+++ b/predavanja/05-spletne-aplikacije.marp.html
@@ -307,7 +307,7 @@ bottle.run()
 <ul>
 <li data-marpit-fragment="1">Funkcijama <code>bottle.get</code> in <code>bottle.post</code> podamo pot, vračata pa dekorator, ki registrira funkcijo za zahtevke <code>GET</code> oziroma <code>POST</code> na podani poti.
 <ul>
-<li>Ko strežnik dobi zahtevek za podano pot, se izvede ustrezna</li>
+<li>Ko strežnik dobi zahtevek za podano pot, se izvede ustrezna funkcija.</li>
 </ul>
 </li>
 </ul>
