--- a/predavanja/04-python.marp.html
+++ b/predavanja/04-python.marp.html
@@ -121,7 +121,7 @@
 <h1 id="primer-s-sqlite">Primer s SQLite</h1>
 <ul>
 <li data-marpit-fragment="1">
-<p>Uporabimo bazo <a href="bbc.db"><code>bbc.db</code></a>.</p>
+<p>Uporabimo bazo <a href="jupyter/bbc.db"><code>bbc.db</code></a>.</p>
 </li>
 <li data-marpit-fragment="2">
 <p>Izpišimo imena vseh evropskih držav.</p>
