Piškotke se podpisuje

--- a/predavanja/05-spletne-aplikacije.marp.html
+++ b/predavanja/05-spletne-aplikacije.marp.html
@@ -163,7 +163,7 @@ www.google.com has IPv6 address 2a00:1450:400d:80e::2004
 <li>Podatki o prijavljenem uporabniku, vsebina košarice, obvestila, ...</li>
 </ul>
 </li>
-<li data-marpit-fragment="3">Pogosto so podatki šifrirani, tako da uporabnik nima vpogleda v vsebino piškotka in ga ne more spreminjati.
+<li data-marpit-fragment="3">Pogosto so podatki kriptografsko podpisani, tako da uporabnik ne more spreminjati piškotka.
 <ul>
 <li>Uporabnik lahko še vedno pobriše piškotke!</li>
 </ul>
