Spremembe primerov HTML/CSS s predavanj

--- a/predavanja/html/druga_stran.html
+++ b/predavanja/html/druga_stran.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="stili.css" type="text/css">
     </head>
     <body>
+        <h1>Druga stran</h1>
         <p>Tukaj je še ena stran.</p>
         <p><a href="index.html">Nazaj</a></p>
     </body>
