--- a/predavanja/01-uvod.marp.html
+++ b/predavanja/01-uvod.marp.html
@@ -236,7 +236,7 @@
 <li data-marpit-fragment="3">Danes praktično večina baz:
 <ul>
 <li><strong>R</strong>elacijske podatkovne baze</li>
-<li><strong>R</strong>DMBS</li>
+<li><strong>R</strong>DBMS</li>
 </ul>
 </li>
 </ul>
@@ -244,7 +244,7 @@
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="13" data-marpit-fragments="2" data-style="@import url('style.css')" lang="sl-SI" style="--style:@import url('style.css');">
 <h1 id="sistemi-za-upravljanje-z-relacijskimi-bazami-podatkov">Sistemi za upravljanje z relacijskimi bazami podatkov</h1>
 <ul>
-<li data-marpit-fragment="1">Primeri RDMBS:
+<li data-marpit-fragment="1">Primeri RDBMS:
 <ul>
 <li>MS Access, MySQL, PostgreSQL, Oracle, MS SQL, DB2, SQLite, ...</li>
 </ul>
@@ -431,9 +431,9 @@
 <li>Vsaki entiteti pripada ena tabela.</li>
 </ul>
 </li>
-<li data-marpit-fragment="2"><span>Vrstica</span>: primerek entitete</li>
+<li data-marpit-fragment="2"><span class="green">Vrstica</span>: primerek entitete</li>
 <li data-marpit-fragment="3"><span class="red">Stolpec</span>: lastnost (npr. ime in priimek, stopnja izobrazbe)</li>
-<li data-marpit-fragment="4"><span>Celica</span>: vrednost lastnosti določenega primerka</li>
+<li data-marpit-fragment="4"><span class="blue">Celica</span>: vrednost lastnosti določenega primerka</li>
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="19" data-style="@import url('style.css')" lang="sl-SI" style="--style:@import url('style.css');">
@@ -441,7 +441,7 @@
 <thead>
 <tr>
 <th><code>IDZaposlenega</code></th>
-<th><span><code>ImePriimek</code></span></th>
+<th><span class="red"><code>ImePriimek</code></span></th>
 <th><code>IDOddelka</code></th>
 <th><code>Stopnja</code></th>
 </tr>
@@ -449,25 +449,25 @@
 <tbody>
 <tr>
 <td>MK1</td>
-<td><span>Miha Kranjc</span></td>
+<td><span class="red">Miha Kranjc</span></td>
 <td>PO</td>
 <td>IV</td>
 </tr>
 <tr>
-<td><span>MH1</span></td>
-<td><span>Maja Hrust</span></td>
-<td><span>KO</span></td>
-<td><span>VII</span></td>
+<td><span class="green">MH1</span></td>
+<td><span class="blue">Maja Hrust</span></td>
+<td><span class="green">KO</span></td>
+<td><span class="green">VII</span></td>
 </tr>
 <tr>
 <td>LS1</td>
-<td><span>Lidija Svet</span></td>
+<td><span class="red">Lidija Svet</span></td>
 <td>RO</td>
 <td>V</td>
 </tr>
 <tr>
 <td>MK2</td>
-<td><span>Mitja Kern</span></td>
+<td><span class="red">Mitja Kern</span></td>
 <td>NO</td>
 <td>IV</td>
 </tr>
