--- a/predavanja/02-SQL.marp.html
+++ b/predavanja/02-SQL.marp.html
@@ -53,7 +53,7 @@
 <ul>
 <li data-marpit-fragment="1"><code>*</code>
 <ul>
-<li>Izpiši vse stolpce</li>
+<li>Vrni vse stolpce</li>
 <li>V izhodu naj bodo vsi stolpci izvorne tabele</li>
 </ul>
 </li>
