Odstranjen odvečen naglas

--- a/predavanja/02-SQL.marp.html
+++ b/predavanja/02-SQL.marp.html
@@ -1780,7 +1780,7 @@ this is incompatible with sql_mode=only_full_group_by
 <li data-marpit-fragment="2">Če pri vstavljanju podatka ne navedemo, se uporabi privzeta vrednost.</li>
 <li data-marpit-fragment="3">Poseben primer: avtomatsko številčenje.
 <ul>
-<li>V SQLite uporabimo določilo <code>AUTOINCREMENT</code> takoj za <code>PRIMARY KEY</code> pri stolpcu tipa <code>ìnteger</code>.</li>
+<li>V SQLite uporabimo določilo <code>AUTOINCREMENT</code> takoj za <code>PRIMARY KEY</code> pri stolpcu tipa <code>integer</code>.</li>
 <li>Nekateri RDBMS v ta namen uporabijo števce.</li>
 </ul>
 </li>
